# plantod

./: .env.example  .gitignore  LICENSE  PUBLISHING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/plantod/: __init__.py  artifacts.py  cli.py  config.py  conversation.py  executor.py  gitutil.py  interactive.py  locking.py  menu.py  orchestrator.py  parsing.py  planner.py  preflight.py  repo.py  retry.py  reviewer.py  schemas.py  scope.py  state.py  testrunner.py  ui.py  usage.py
src/plantod/adapters/: __init__.py  base.py  claude.py  cliagent.py  mock.py  opencode.py  registry.py
tests/: test_artifacts.py  test_cliagent.py  test_config.py  test_conversation.py  test_escalation.py  test_guards.py  test_hardening.py  test_menu.py  test_mode.py  test_model_list.py  test_orchestrator_mock.py  test_preflight.py  test_scope.py  test_spec.py  test_state_machine.py  test_usage.py
