[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plantod"
version = "0.1.0"
description = "Planning-first, repo-aware AI coding orchestrator CLI"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "PLANTOD" }]
keywords = ["ai", "cli", "coding", "orchestrator", "planning"]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "anthropic>=0.39",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
plantod = "plantod.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
include = ["plantod*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
